<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/AppTheme.Fullscreen"
    tools:context=".OnboardingActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/onboarding_howto"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_howto_summary"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="16sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/description"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/roundedCornersImage"
        app:srcCompat="@drawable/onboarding_sample_devices" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_howto_troubleshoot"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="16sp" />

    <Button
        style="@style/OnboardingButtonStyle"
        android:id="@+id/continue_button"
        android:layout_alignParentBottom="true"
        android:text="@string/onboarding_button_finish" />

</RelativeLayout>
